  - Rename the log_chain function to message_chain and run_log_server
    function to run_message_server, in Message::Passing::DSL
    to follow the general rename, as we're not just about logs.

0.007
  - Documentation in the message-pass script

  - Add --configfile option to default script, allowing
    you to load config from a file, rather than supplying
    it on command line.

  - Make JSON encoder pass non refs straight through,
    so that if a previous filter generates a scalar,
    then this gets sent as-is.

  - Make JSON decoder pass refs straight through, to
    act as a no-op if the input has already decoded
    it's data into a hash.

  - Remove spurious warnings from reconnect code.

0.006
  - Rip JSON encoders and decoders out of inputs and
    outputs, making them optional and/or replaceable.
    *NOTE* Current Input / Output code will need updating
    for this change!!
  - Allow Null encoders or decoders.

0.005
   - Get connection timeouts and connection reconnects
     working in the generic ConnectionManager role.

   - Add link to syslog input

   - AMQP input/output is on CPAN

   - Add link to STOMP input/output.

0.004
   - Fix script name

   - Note irc channel and bug trackers in docs.

0.003
   - Updates and fixes to documentation.

   - Unify license/author/copyright to main file.

0.002_01
   - Add more core roles for use by extensions which need to make
     a connection.

   - Rename to Message::Passing, as it's a better description
     of what we do, and will cause less confusion with other projects.

0.002
    - Support a --daemonize option in logstash scripts.

    - Support a --pid_file option in logstash scripts.

    - Allow inputs to coerce a hash in output_to to an output,
      which is more verbose than the DSL, but also allows you
      to setup simple output chains from a simple data structure
      (such as you might read in from a config file).

    - Explicitly turn off output buffering in STDOUT output.